# repo-tester

./: .gitignore  .repo-tester-ignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  render.yaml  server.py
.claude-plugin/: manifest.json
.github/: RELEASE.md
.github/workflows/: ci.yml  publish.yml  security-scan.yml
docs/superpowers/plans/: 2026-04-02-pypi-publishing.md
docs/superpowers/specs/: 2026-04-01-pypi-publishing-design.md
scripts/: README.md  bulk-fix-dependencies.sh  fix-all-my-repos.py
src/repo_tester/: cli.py  context.py  repo_type.py  report.py
src/repo_tester/patterns/: known_packages.json  malicious_patterns.json
src/repo_tester/scanners/: base.py  health.py  malicious.py  supply_chain.py
tests/: conftest.py  test_cli.py  test_context.py  test_report.py  test_scanner_health.py  test_scanner_malicious.py  test_scanner_supply_chain.py
tui-dashboard/: repo-tester-tui.html
